WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70663
[WK2] Clicking a print button in a PDF doesn't do anything
https://bugs.webkit.org/show_bug.cgi?id=70663
Summary
[WK2] Clicking a print button in a PDF doesn't do anything
Alexey Proskuryakov
Reported
2011-10-21 17:36:57 PDT
* STEPS TO REPRODUCE In Safari 5.1 on 10.6 or 10.7, go to:
http://dmv.ca.gov/forms/reg/reg227.pdf
Click the print button in the PDF form * RESULTS No printer dialog appears <
rdar://problem/9795014
>
Attachments
proposed fix
(3.37 KB, patch)
2011-10-21 17:43 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-10-21 17:43:54 PDT
Created
attachment 112051
[details]
proposed fix
WebKit Review Bot
Comment 2
2011-10-21 21:56:18 PDT
Comment on
attachment 112051
[details]
proposed fix Clearing flags on attachment: 112051 Committed
r98189
: <
http://trac.webkit.org/changeset/98189
>
WebKit Review Bot
Comment 3
2011-10-21 21:56:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug