[WK2] Clicking a print button in a PDF doesn't do anything https://bugs.webkit.org/show_bug.cgi?id=70663 <rdar://problem/9795014>

Reviewed by Dan Bernstein.

* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::printMainFrame): Added a public method
that PDFViewController could call.

* UIProcess/API/mac/PDFViewController.h:
* UIProcess/API/mac/PDFViewController.mm:
(-[WKPDFView PDFViewPerformPrint:]):
(WebKit::PDFViewController::print):
Connect PDFView delegate method for printing.


Canonical link: https://commits.webkit.org/86866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98189 268f45cc-cd09-0410-ab3c-d52691b4dbfc