Source/WebKit2/UIProcess/API/mac/PDFViewController.h
@@ -66,6 +66,7 @@ public:
     void openPDFInFinder();
     void savePDFToDownloadsFolder();
     void linkClicked(const String& url);
+    void print();
 
     void findString(const String&, FindOptions, unsigned maxMatchCount);
     void countStringMatches(const String&, FindOptions, unsigned maxMatchCount);
